--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #3cee31; }
+  background: #984f68; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #b092fe; }
+  background: #94ab25; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #28092d; }
+  background: #5092be; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #734662; }
+  background: #997a06; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #2bd926; }
+  background: #cbbff1; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #83c5ae; }
+  background: #2b7df3; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #745dd9; }
+  background: #e6f697; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #b7f68b; }
+  background: #c4477e; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #957a49; }
+  background: #7f5086; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #ad8e38; }
+  background: #488f1d; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #9dc418; }
+  background: #0adfd0; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #bb3d66; }
+  background: #f033b9; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #ba363d; }
+  background: #651e7b; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #cc773b; }
+  background: #a32a0f; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #7e06bd; }
+  background: #3d598a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #418fb8; }
+  background: #94c6f4; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5a5fea; }
+  background: #cc60d5; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #e02a03; }
+  background: #d6b852; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #ba5add; }
+  background: #959617; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #8edbfb; }
+  background: #1f74ab; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #16b868; }
+  background: #a88d6f; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #630bc0; }
+  background: #6fdbd0; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #b808bc; }
+  background: #7778bb; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #52db9a; }
+  background: #4d7d99; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #db9b36; }
+  background: #69b8cd; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #5edf27; }
+  background: #4d43cc; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #62ddda; }
+  background: #43628e; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #f6395f; }
+  background: #fe6687; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #450c98; }
+  background: #23e594; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #6755e7; }
+  background: #dcdbff; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #538c2b; }
+  background: #19e884; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #952134; }
+  background: #efd5d7; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #45ef39; }
+  background: #154087; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #3ed077; }
+  background: #2c3af2; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #f1a556; }
+  background: #61f004; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #5408a0; }
+  background: #8eb50b; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #14eab6; }
+  background: #2a4dc8; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #92271b; }
+  background: #a1b786; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #bfcd80; }
+  background: #4b8918; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #2ce5f6; }
+  background: #bbf3f7; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #c1dd23; }
+  background: #8a10fc; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #d5807a; }
+  background: #cf1134; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #5e493e; }
+  background: #652fe1; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #03548f; }
+  background: #68153b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #47cf77; }
+  background: #fd325d; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b28027; }
+  background: #b7ca07; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #5f04ae; }
+  background: #5e854f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #c66460; }
+  background: #c3bc9a; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #86da92; }
+  background: #1fad7b; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #6aab47; }
+  background: #60b2a3; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #ac2fc4; }
+  background: #b8766d; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #0892b7; }
+  background: #13fcf8; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #dc22e0; }
+  background: #090315; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #0b458f; }
+  background: #e50b68; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #9d4bb9; }
+  background: #9ff1b6; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #0d37f2; }
+  background: #3b3f35; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #2a1db1; }
+  background: #c05eb2; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #abd84e; }
+  background: #122a11; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #19c439; }
+  background: #6812b0; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #18143c; }
+  background: #f3a5d3; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #6fcf49; }
+  background: #a8e3cc; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #aa4658; }
+  background: #eaa041; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #426d7b; }
+  background: #d0abe1; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #b31c53; }
+  background: #e8cc38; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #b195d6; }
+  background: #f03d27; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #e7418c; }
+  background: #90d417; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #456bdc; }
+  background: #1060e1; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #6f6e66; }
+  background: #5491f3; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #115973; }
+  background: #70f184; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #7c4ede; }
+  background: #4c0f12; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #d8cb9c; }
+  background: #1971b7; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #f7cf34; }
+  background: #e49146; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #ecbe63; }
+  background: #030901; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #ff0a7f; }
+  background: #eb08fc; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #4cc180; }
+  background: #6fc19e; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #d33a7a; }
+  background: #166c88; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #327728; }
+  background: #3ceac0; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #965913; }
+  background: #93d1d6; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #9c43f3; }
+  background: #3bede3; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #650361; }
+  background: #ce2f23; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b08c89; }
+  background: #8f9a80; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8acf79; }
+  background: #c0ff7f; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #2748fb; }
+  background: #8f484c; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #f10ab1; }
+  background: #12208b; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #877421; }
+  background: #ee7598; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #e97d72; }
+  background: #15e88d; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #af49db; }
+  background: #25739b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #f270be; }
+  background: #9e81db; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #c0694a; }
+  background: #db8585; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #b90ae9; }
+  background: #619945; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #38c3b0; }
+  background: #4aeb8c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #d369ad; }
+  background: #02b4f9; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #ca2b2a; }
+  background: #a92ba4; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #5bfafe; }
+  background: #b4115d; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #80d549; }
+  background: #33f436; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #139007; }
+  background: #0a11c8; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #a7e653; }
+  background: #846d36; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ff5859; }
+  background: #644bb0; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #57193d; }
+  background: #21e2f3; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #248741; }
+  background: #ff4ea4; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10588,7 +10588,7 @@ table .bold-heading {
   display: grid;
   margin-top: 15px;
   grid-gap: 20px;
-  grid-template-columns: auto auto; }
+  grid-template-columns: 1fr 1fr; }
 
 .widget-checkbox-filter-row {
   display: flex;
