--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3897,7 +3897,7 @@ table .bold-heading {
  display: grid;
  margin-top: 15px;
  grid-gap: 20px;
- grid-template-columns: auto auto;
+ grid-template-columns: 1fr 1fr;
 }
 
 .widget-checkbox-filter-row {
